# uv-deps-nexus

./: .gitignore  README.md  clone.sh  main.py  pyproject.toml  python.py  python_upgrade.sh  requirements.txt
