[project]
name = "uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocron>=2.1",
    "aiofiles>=24.1.0",
    "anthropic>=0.52.0",
    "apscheduler>=3.10.0",
    "argparse>=1.4.0",
    "behave>=1.3.3",
    "cryptography>=46.0.3",
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "faster-whisper>=1.0.0",
    "fastmcp>=3.3.1",
    "gguf>=0.18.0",
    "gitpython>=3.1.45",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "kubernetes>=34.1.0",
    "langdetect>=1.0.9",
    "markdown>=3.10.2",
    "matrix-nio[e2e]>=0.25.2",
    "mcp>=1.27.1",
    "mysql-connector-python>=9.7.0",
    "openai>=2.21.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "paramiko>=4.0.0",
    "pip>=25.2",
    "playwright>=1.60.0",
    "prometheus-client>=0.23.1",
    "prompt-toolkit>=3.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "python-markdown>=0.1.0",
    "python-multipart>=0.0.29",
    "pyyaml>=6.0.3",
    "questionary>=2.0",
    "requests>=2.32.5",
    "rich>=15",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.31",
    "sse-starlette>=3.4.2",
    "textual>=8.2.5",
    "tqdm>=4.67.3",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.48.0",
    "watchdog>=6.0.0",
]

[[tool.uv.index]]
name = "nexus"
url = "http://localhost:8081/repository/pypi-proxy/simple"
default = true
