[project]
name = "uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocron",
    "aiofiles",
    "anthropic",
    "apscheduler",
    "argparse",
    "behave",
    "cryptography",
    "ddgs",
    "docker",
    "dotenv",
    "fastapi",
    "faster-whisper",
    "fastmcp",
    "gguf",
    "gitpython",
    "httpx",
    "itsdangerous",
    "jinja2",
    "kubernetes",
    "langdetect",
    "markdown",
    "matrix-nio[e2e]",
    "mcp",
    "mysql-connector-python",
    "openai",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-sdk",
    "packaging",
    "paramiko",
    "pip",
    "playwright",
    "prettytable",
    "prometheus-client",
    "prompt-toolkit",
    "pydantic",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "python-markdown",
    "python-multipart",
    "pyyaml",
    "questionary",
    "requests",
    "rich",
    "ruff",
    "spacy",
    "sqlalchemy",
    "sqlmodel",
    "sse-starlette",
    "textual",
    "textual-dev",
    "tqdm",
    "typer",
    "uvicorn[standard]",
    "watchdog",
]

[[tool.uv.index]]
name = "nexus"
url = "http://localhost:8081/repository/pypi-proxy/simple"
default = true
