[project]
name = "uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocron",
    "aiofiles",
    "aiosqlite",
    "anthropic",
    "apscheduler",
    "argparse",
    "asyncio",
    "behave",
    "cryptography",
    "ddgs",
    "docker",
    "dotenv",
    "fastapi",
    "faster-whisper",
    "fastmcp",
    "flask",
    "flask-cors",
    "flask-socketio",
    "flask-sqlalchemy",
    "gevent",
    "gevent-websocket",
    "gguf",
    "gitpython",
    "gunicorn",
    "httpx",
    "itsdangerous",
    "jinja2",
    "kubernetes",
    "langdetect",
    "lask",
    "lmstudio",
    "markdown",
    "matrix-nio[e2e]",
    "mcp",
    "mysql-connector-python",
    "numpy",
    "openai",
    "opencv-python-headless",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-sdk",
    "packaging",
    "pandas",
    "paramiko",
    "pip",
    "playwright",
    "prettytable",
    "prometheus-client",
    "prompt-toolkit",
    "pydantic",
    "pynput",
    "pynvml",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "python-dateutil",
    "python-dotenv",
    "python-json-logger",
    "python-markdown",
    "python-multipart",
    "python-socketio",
    "pyyaml",
    "questionary",
    "requests",
    "rich",
    "ruff",
    "sounddevice",
    "soundfile",
    "spacy",
    "sqlalchemy",
    "sqlmodel",
    "sse-starlette",
    "starlette",
    "textual",
    "textual-dev",
    "tqdm",
    "typer",
    "uvicorn[standard]",
    "watchdog",
]

[[tool.uv.index]]
name = "nexus"
url = "http://localhost:8081/repository/pypi-proxy/simple"
default = true
